# plc-fuzzing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_afl.sh  sec21-tychalas.md
TempControlPLC/pous/programs/: main.st
out-modbus/default/: cmdline  fuzzer_setup  target_hash
plcfuzz/include/: plcfuzz_target_api.h
plcfuzz/src/: afl_harness.c  core.c  core.h
plcfuzz/targets/modbus_tcp/: config.openplc.example.json  modbus_tcp_target.c
plcfuzz/targets/openplc_inproc/: openplc_inproc_target.c
scripts/: run_afl_modbus_tcp.sh  run_afl_openplc_inproc.sh
test-projects/TempControlPLC/: Script.py  project.json
test-projects/TempControlPLC/devices/: configuration.json
test-projects/TempControlPLC/devices/servers/: Modbus.json
test-projects/TempControlPLC/pous/programs/: main.st
